--- a/template/package.json
+++ b/template/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "<%= _(moduleName).pluralize().capitalize() %>",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "private": true,
   "scripts": {
+    "dev:client": "webpack --watch",
+    "dev:server": "nodemon server.js --ignore assets",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "webpack",
     "start": "node server.js"
   },
   "keywords": [],
@@ -13,12 +17,22 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3"
+    "compression": "^1.7.4",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.20",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
-    "husky": "^0.14.3",
-    "prettier": "^1.14.2",
-    "pretty-quick": "^1.6.0"
+    "@babel/core": "^7.4.0",
+    "babel-loader": "^8.0.5",
+    "babel-preset-primavera": "^1.3.0",
+    "concurrently": "^4.1.0",
+    "husky": "^1.3.1",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
